--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,10 @@ bind-key 'C-q' send-prefix
 set -g base-index 1
 set -g pane-base-index 1
 
+# for i in {0..255} ; do printf "\x1b[38;5;${i}mcolour${i}\n" done
+set -g status-bg black
+set -g status-fg colour23
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
