--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,26 @@
+# Note.
+# bind = bind-key, unbind = unbind-key
+# set = set-option, setw = set-window-option
+
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+#set -g default-terminal "screen-256color"
+
 unbind-key C-b
 set -g prefix 'C-q'
 bind-key 'C-q' send-prefix
 
+setw -g automatic-rename on
+set -g set-titles on
+
+set -g history-limit 10000
+
+bind | split-window -h
+#bind s split-window -v
+
 set -g base-index 1
 set -g pane-base-index 1
 
-# for i in {0..255} ; do printf "\x1b[38;5;${i}mcolour${i}\n"; done
-set -g status-bg black
-set -g status-fg colour23
+set -g status-justify centre
 
 bind h select-pane -L
 bind j select-pane -D
@@ -20,4 +33,35 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+#bind -r Left resize-pane -L 5
+#bind -r Down resize-pane -D 5
+#bind -r Up resize-pane -U 5
+#bind -r Right resize-pane -R 5
+
+#bind -r M-j resize-pane -D
+#bind -r M-k resize-pane -U
+#bind -r M-h resize-pane -L
+#bind -r M-l resize-pane -R
+
 setw -g mode-keys vi		# Use vi binding in copy mode
+
+# for i in {0..255} ; do printf "\x1b[38;5;${i}mcolour${i}\n"; done
+set -g status-bg black
+#set -g status-fg colour23
+set -g status-fg yellow
+#set -g status-fg cyan
+#set -g status-attr dim
+set -g status-attr bright
+set -g window-status-current-bg white
+set -g window-status-current-fg black
+set -g pane-active-border-bg black
+set -g pane-active-border-fg blue
+#set -g window-status-current-bg red
+#set -g window-status-current-fg white
+set -g window-status-current-attr bold
+#set -g status-interval 5	# default = 15sec
+set -g status-left-length 30
+set -g status-left '#[fg=green]#h (#S)'
+set -g status-right '#[fg=yellow]%H:%M'
+#set -g status-left '#[fg=green](#S) #(whoami)'
+#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
