--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,7 +55,7 @@ set -g status-attr bright
 set -g window-status-current-bg white
 set -g window-status-current-fg black
 set -g pane-active-border-bg black
-set -g pane-active-border-fg blue
+set -g pane-active-border-fg red
 #set -g window-status-current-bg red
 #set -g window-status-current-fg white
 set -g window-status-current-attr bold
