Change binding for 'split-window -h' (| -> \)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,8 @@ set -g set-titles on
 
 set -g history-limit 10000
 
-bind | split-window -h
+bind \ split-window -h
+#bind | split-window -h
 #bind s split-window -v
 
 set -g base-index 1
