Add binding for last-pane.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind C-q last-pane
 bind m last-window		# rebind 'l' (last-window)
 
 bind -r H resize-pane -L 5
