--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,9 +14,10 @@ set -g set-titles on
 
 set -g history-limit 10000
 
-bind \ split-window -h
-#bind | split-window -h
-#bind s split-window -v
+# from tmux 1.9
+bind c new-window -c '#{pane_current_path}'
+bind " split-window -v -c '#{pane_current_path}'
+bind \ split-window -h -c '#{pane_current_path}'
 
 set -g base-index 1
 set -g pane-base-index 1
