Change display-panes-time (1000ms -> 2000ms)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ setw -g automatic-rename on
 set -g set-titles on
 
 set -g history-limit 10000
+set -g display-panes-time 2000
 
 # from tmux 1.9
 bind c new-window -c '#{pane_current_path}'
