--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ set -g display-panes-time 2000
 
 # from tmux 1.9
 bind c new-window -c '#{pane_current_path}'
-bind " split-window -v -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
 bind \ split-window -h -c '#{pane_current_path}'
 
 set -g base-index 1
