Add tmux binding for making curruent pane width to 80

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,8 @@ bind c new-window -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
 bind \ split-window -h -c '#{pane_current_path}'
 
+bind 'C-w' resize-pane -x 80	# make current pane width to 80
+
 set -g base-index 1
 set -g pane-base-index 1
 
