--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,8 +60,8 @@ set -g status-fg yellow
 set -g status-attr bright
 set -g window-status-current-bg white
 set -g window-status-current-fg black
-set -g pane-active-border-bg black
-set -g pane-active-border-fg red
+set -g pane-active-border-bg blue
+set -g pane-active-border-fg brightblue
 #set -g window-status-current-bg red
 #set -g window-status-current-fg white
 set -g window-status-current-attr bold
