--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,3 +71,4 @@ set -g status-left '#[fg=green]#h (#S)'
 set -g status-right '#[fg=yellow]%H:%M'
 #set -g status-left '#[fg=green](#S) #(whoami)'
 #set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+set -g set-clipboard off
