Add Mac-os Specific tmux setting.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,3 +72,6 @@ set -g status-right '#[fg=yellow]%H:%M'
 #set -g status-left '#[fg=green](#S) #(whoami)'
 #set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 set -g set-clipboard off
+
+# Mac OS specific settings.
+if-shell 'test "$(uname)" = "Darwin"' 'source-file ~/.tmux-macos.conf'
